--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                   we are committed to delivering superior craftsmanship on every project. Our team ensures every project meets
                   client expectations through innovative solutions and the highest industry standards.
                </p>
-               <div class="about_bt"><a href="#">LEARN MORE</a></div>
+               <!--<div class="about_bt"><a href="#">LEARN MORE</a></div>-->
             </div>
          </div>
          <div class="col-md-6 padding_0">
@@ -327,7 +327,7 @@
          exceeds expectations, on time and within budget.
       </p>
       <div class="choice_main">
-         <div class="choose_bt"><a href="#">Choose Your Solution</a></div>
+         <!--<div class="choose_bt"><a href="#">Choose Your Solution</a></div>-->
       </div>
    </div>
 </div>
@@ -415,7 +415,7 @@
                            </form>
                         </div>
                      </div>
-                     <div class="send_bt"><a href="#">SEND</a></div>
+                     <div class="send_bt"><a href="mailto:help@hookerconstruction.com">SEND</a></div>
                   </div>
                </div>
                <div class="col-md-6 padding_0">
