--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,15 @@
                </div>
                <div class="col-md-6 padding_0">
                   <div class="map-responsive">
-                     <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="450" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
+                     <iframe 
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=10719+MS-336,+Thaxton,+MS+38871" 
+  width="600" 
+  height="450" 
+  frameborder="0" 
+  style="border:0; width: 100%;" 
+  allowfullscreen>
+</iframe>
+
                   </div>
                </div>
             </div>
